[package]
name = "service-2"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "uuid", "macros", "chrono", "bigdecimal"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10.9"
rand = "0.9.2"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5.7"
futures = "0.3.31"
bigdecimal = { version = "0.4", features = ["serde"] }
